--- a/build.gradle
+++ b/build.gradle
@@ -33,8 +33,9 @@ dependencies {
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-
-    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+    modImplementation(fabricApi.module("fabric-rendering-fluids-v1", project.fabric_version))
+    modImplementation(fabricApi.module("fabric-rendering-data-attachment-v1", project.fabric_version))
+    modImplementation(fabricApi.module("fabric-key-binding-api-v1", project.fabric_version))
 
     modImplementation "maven.modrinth:sodium:mc1.20-0.4.10"
     modImplementation "maven.modrinth:iris:1.6.4+1.20"
