--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -21,4 +21,5 @@ jobs:
             ~/.gradle/caches
             ~/.gradle/wrapper
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+      - run: chmod +x ./gradlew
       - run: ./gradlew build --stacktrace --no-daemon
