--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ repositories {
             includeGroup "maven.modrinth"
         }
     }
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
@@ -45,6 +46,9 @@ dependencies {
     modRuntimeOnly 'io.github.douira:glsl-transformer:2.0.0-pre13'
 
     modRuntimeOnly 'net.java.dev.jna:jna:5.9.0'
+
+    implementation("com.github.FiguraMC.LuaJ:luaj-core:3.0.6-figura")
+    implementation("com.github.FiguraMC.LuaJ:luaj-jse:3.0.6-figura")
 }
 
 processResources {
