--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,7 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx4G
+org.gradle.daemon=false
+
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
 minecraft_version=1.20.2
